[gd_scene load_steps=28 format=3 uid="uid://dl1yh0nllbjk5"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_i28to"]
[ext_resource type="Texture2D" uid="uid://d3jwm15et3t22" path="res://Assets/Sprites/Mario_Small_Idle.png" id="1_rbppx"]
[ext_resource type="Texture2D" uid="uid://bmxxy0rlchake" path="res://Assets/Sprites/pixil-frame-0.png" id="2_2abal"]
[ext_resource type="Shape2D" uid="uid://cta002cfcr0l2" path="res://Resources/CollisionShapes/small_mario_collision_shape.tres" id="2_2r7cn"]
[ext_resource type="Texture2D" uid="uid://ihc01mduemgy" path="res://Assets/Sprites/Ferb_Big_Idle.png" id="2_p5qfq"]
[ext_resource type="Texture2D" uid="uid://ct8uqpacoxaq1" path="res://Assets/Sprites/Mario_Big_Idle.png" id="2_s57qn"]
[ext_resource type="Texture2D" uid="uid://c3njnoy5owfh3" path="res://Assets/Sprites/Mario_Big_Jump.png" id="3_l1ryk"]
[ext_resource type="Texture2D" uid="uid://crqgheu7ndoxs" path="res://Assets/Sprites/Mario_Big_Pole.png" id="4_1qh5m"]
[ext_resource type="Texture2D" uid="uid://dvnr77h30cjn6" path="res://Assets/Sprites/Mario_Big_Run1.png" id="5_ksknq"]
[ext_resource type="Texture2D" uid="uid://biwgmc04ug3tt" path="res://Assets/Sprites/Mario_Big_Run2.png" id="6_ooxt2"]
[ext_resource type="Texture2D" uid="uid://cxxi757iq1gnv" path="res://Assets/Sprites/Mario_Big_Run3.png" id="7_0bxdb"]
[ext_resource type="Texture2D" uid="uid://k303fjvwyalc" path="res://Assets/Sprites/Mario_Big_Slide.png" id="8_tamvh"]
[ext_resource type="Texture2D" uid="uid://4axg8se7m40x" path="res://Assets/Sprites/Mario_Shooting_Idle.png" id="9_thlrs"]
[ext_resource type="Texture2D" uid="uid://vmaqhbv8xamx" path="res://Assets/Sprites/phineas death.png" id="10_sd5qy"]
[ext_resource type="Texture2D" uid="uid://ugx1dv5u8m74" path="res://Assets/Sprites/Mario-Shooting.png" id="11_twa33"]
[ext_resource type="Texture2D" uid="uid://d3i8ain3y4vfj" path="res://Assets/Sprites/Mario_Shooting_Jump.png" id="12_fg8tg"]
[ext_resource type="Texture2D" uid="uid://cwns46e1wprcc" path="res://Assets/Sprites/Mario_Shooting_Pole.png" id="13_2ajh8"]
[ext_resource type="Texture2D" uid="uid://bsfrxav8x3dot" path="res://Assets/Sprites/Mario_Shooting_Run1.png" id="14_b7y55"]
[ext_resource type="Texture2D" uid="uid://cipjmquw1tlrv" path="res://Assets/Sprites/Mario_Shooting_Run2.png" id="15_shaw8"]
[ext_resource type="Texture2D" uid="uid://daqnle02fss6v" path="res://Assets/Sprites/Mario_Shooting_Run3.png" id="16_l8hos"]
[ext_resource type="Texture2D" uid="uid://1w6lqgnlyqo2" path="res://Assets/Sprites/Mario_Shooting-Slide.png" id="17_cmrh3"]
[ext_resource type="Texture2D" uid="uid://bqfjqbv1vr2oq" path="res://Assets/Sprites/Mario_Small_Jump.png" id="19_y5cxs"]
[ext_resource type="Texture2D" uid="uid://ckd7ka2h150dt" path="res://Assets/Sprites/Mario_Small_Pole.png" id="20_0gusd"]
[ext_resource type="Texture2D" uid="uid://cqxhw4uont1d3" path="res://Assets/Sprites/phineas run 1.png" id="21_mt53t"]
[ext_resource type="Texture2D" uid="uid://cal7r48xqmfrt" path="res://Assets/Sprites/Mario_Small_Slide.png" id="24_3fbyf"]
[ext_resource type="Script" path="res://Scripts/player_animated_sprite.gd" id="25_84ua1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pie86"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_p5qfq")
}],
"loop": true,
"name": &"big_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_l1ryk")
}],
"loop": true,
"name": &"big_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_1qh5m")
}],
"loop": true,
"name": &"big_pole",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ksknq")
}, {
"duration": 1.0,
"texture": ExtResource("6_ooxt2")
}, {
"duration": 1.0,
"texture": ExtResource("7_0bxdb")
}],
"loop": true,
"name": &"big_run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_tamvh")
}],
"loop": true,
"name": &"big_slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_s57qn")
}, {
"duration": 1.0,
"texture": ExtResource("9_thlrs")
}, {
"duration": 1.0,
"texture": ExtResource("2_s57qn")
}, {
"duration": 1.0,
"texture": ExtResource("9_thlrs")
}, {
"duration": 1.0,
"texture": ExtResource("2_s57qn")
}, {
"duration": 1.0,
"texture": ExtResource("9_thlrs")
}, {
"duration": 1.0,
"texture": ExtResource("2_s57qn")
}, {
"duration": 1.0,
"texture": ExtResource("9_thlrs")
}],
"loop": false,
"name": &"big_to_shooting",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_sd5qy")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_twa33")
}],
"loop": false,
"name": &"shoot",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_thlrs")
}],
"loop": true,
"name": &"shooting_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_fg8tg")
}],
"loop": true,
"name": &"shooting_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_2ajh8")
}],
"loop": true,
"name": &"shooting_pole",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_b7y55")
}, {
"duration": 1.0,
"texture": ExtResource("15_shaw8")
}, {
"duration": 1.0,
"texture": ExtResource("16_l8hos")
}],
"loop": true,
"name": &"shooting_run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_cmrh3")
}],
"loop": true,
"name": &"shooting_slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2abal")
}],
"loop": true,
"name": &"small_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_y5cxs")
}],
"loop": true,
"name": &"small_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_0gusd")
}],
"loop": true,
"name": &"small_pole",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_mt53t")
}],
"loop": true,
"name": &"small_run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_3fbyf")
}],
"loop": true,
"name": &"small_slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_rbppx")
}, {
"duration": 1.0,
"texture": ExtResource("2_s57qn")
}, {
"duration": 1.0,
"texture": ExtResource("1_rbppx")
}, {
"duration": 1.0,
"texture": ExtResource("2_s57qn")
}, {
"duration": 1.0,
"texture": ExtResource("1_rbppx")
}, {
"duration": 1.0,
"texture": ExtResource("2_s57qn")
}, {
"duration": 1.0,
"texture": ExtResource("1_rbppx")
}, {
"duration": 1.0,
"texture": ExtResource("2_s57qn")
}],
"loop": false,
"name": &"small_to_big",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_rbppx")
}, {
"duration": 1.0,
"texture": ExtResource("9_thlrs")
}, {
"duration": 1.0,
"texture": ExtResource("1_rbppx")
}, {
"duration": 1.0,
"texture": ExtResource("9_thlrs")
}, {
"duration": 1.0,
"texture": ExtResource("1_rbppx")
}, {
"duration": 1.0,
"texture": ExtResource("9_thlrs")
}, {
"duration": 1.0,
"texture": ExtResource("1_rbppx")
}, {
"duration": 1.0,
"texture": ExtResource("9_thlrs")
}],
"loop": false,
"name": &"small_to_shooting",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
collision_mask = 22
script = ExtResource("1_i28to")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pie86")
animation = &"big_idle"
script = ExtResource("25_84ua1")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 60

[node name="AreaCollisionShape" type="CollisionShape2D" parent="Area2D"]
shape = ExtResource("2_2r7cn")

[node name="BodyCollisionShape" type="CollisionShape2D" parent="."]
shape = ExtResource("2_2r7cn")

[node name="ShootingPoint" type="Marker2D" parent="."]
position = Vector2(7, -5)

[connection signal="animation_finished" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_frame_changed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
